# src/controller/auth.controller.js
@@ -12,7 +12,8 @@ async function register(req, res) {
           name: "Abul Faiz",
           email: "abulfaiz428@gmail.com",
           password: "Login@123",
-          role: "ADMIN"
+          role: "ADMIN",
+          favoriteGenres: ["Action", "Sci-Fi"],
       }
 }
   */
@@ -38,5 +39,40 @@ async function login(req, res) {
   return res.send(result);
 }
 
-const authController = { register, login };
+async function passwordRequest(req, res) {
+  /*
+  #swagger.tags = ['Authentication']
+  #swagger.summary = 'Password request API via Email'
+  #swagger.parameters['body'] = {
+  in : 'body',
+  required : true,
+  schema : {
+  email : "abulfaiz428@gmail.com",
+    }
+}
+*/
+  const result = await authService.requestPassword(req.body.email);
+  return res.send(result);
+}
+
+async function resetPassword(req, res) {
+  /*
+     #swagger.tags = ['Authentication']
+     #swagger.summary = 'Reset password API'
+     #swagger.parameters['body'] = {
+     in : 'body',
+     description : 'User or Admin can reset password here',
+     required : true,
+     schema : {
+     token : "any",
+     newPassword : "Login@123#"
+          }
+      }
+  */
+  const { token, newPassword } = req.body;
+  const result = await authService.reset(token, newPassword);
+  return res.send(result);
+}
+
+const authController = { register, login, passwordRequest, resetPassword };
 module.exports = { authController };
