# src/model/user.model.js
@@ -1,29 +1,55 @@
 const mongoose = require("mongoose");
+const bcrypt = require("bcrypt");
 
 const userSchema = mongoose.Schema(
   {
     name: {
       type: String,
-      required: true,
-      unique: true,
-      trim: true,
+      required: [true, "name is required"],
     },
     email: {
       type: String,
-      required: true,
+      required: [true, "email is required"],
       unique: true,
     },
     password: {
       type: String,
-      required: true,
+      required: [true, "password is required"],
+    },
+    profilePicture: {
+      type: String,
+      default: "Abul Faiz.jpg",
+    },
+    favoriteGenres: {
+      type: [String],
+      default: [],
     },
     role: {
       type: String,
       enum: ["ADMIN", "USER"],
       default: "USER",
-      required: true,
+    },
+    resetPasswordToken: {
+      type: String,
+    },
+    resetPasswordExpire: {
+      type: Date,
     },
   },
-  { versionKey: false }
+  {
+    versionKey: false,
+    timestamps: true,
+  }
 );
+
+userSchema.pre("save", async function (next) {
+  if (!this.isModified("password")) return next();
+  this.password = await bcrypt.hash(this.password, 10);
+  next();
+});
+
+userSchema.methods.comparePassword = async function (Password) {
+  return await bcrypt.compare(Password, this.password);
+};
+
 module.exports = mongoose.model("User", userSchema);
