# src/router/user.route.js
@@ -6,5 +6,7 @@ const { signupSchema, loginSchema } = require("../validation/auth.validate");
 
 router.post("/signUp", validate(signupSchema), authController.register);
 router.post("/login", validate(loginSchema), authController.login);
+router.post("/requestPassword", authController.passwordRequest);
+router.post("/resetPassword", authController.resetPassword);
 
 module.exports = router;
